fix version problems